--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -587,6 +587,32 @@
         font-size 14px
         line-height 1.25em
         font-weight 600
+.email
+    display none
+    margin 8px 0 5px 0
+    @media (min-width 390px)
+        // display flex
+        // //justify-content flex-end
+        // //justify-content center
+        // align-items center
+        display block
+    &__wrap
+        display flex
+        align-items center
+    &__icon
+        width 22px
+        height 22px
+        background-image url(../images/input_type_email.png)
+        background-repeat no-repeat
+        background-size contain
+        margin 1px 10px 0 0
+    &__text
+        display inline-block
+        color #000
+        font-size 15px
+        line-height 1.25em
+        font-weight 600
+
 .offer
     width 100%
     height 400px
@@ -659,15 +685,16 @@
             color #fff
     &_view
         &_action
-            border 2px solid #a61713
-            background #a61713
+            border 2px solid #f95555
+            background #f95555
+            width 100%
             .btn__text
                 color #fff
             &:after
                 background #fff
             &:hover
                 .btn__text
-                    color #a61713            
+                    color #f95555            
         &_pseudo
             border 2px solid #4273d6
             background none
@@ -796,10 +823,21 @@ ul.list
     padding 20px 0
     // &__icon
     //     margin-right 10px
+    &__title
+        font-size 16px
+        line-height 1.2em
+        color #4b4b4b
+        font-weight 600
+    &__link
+        font-size 14px
+        line-height 1.2em
+        color #4b4b4b
+        cursor pointer
+        display inline-block
 
 .copyright
     background #545358
-    padding 15px 0
+    padding 15px 0 10px 0
     &__icons
         display flex
         align-items center
@@ -813,7 +851,7 @@ ul.list
         
     img
         margin-right 10px
-    @media (min-width 500px)
+    @media (min-width 550px)
         .container
             display flex
             //align-items center
@@ -998,7 +1036,7 @@ ul.list
     // padding-top 0.52em
     margin-bottom 1em
     // max-width 400px
-    min-width 280px
+    min-width 240px
     width 100%
     &_error
         .input__message
@@ -1010,23 +1048,24 @@ ul.list
                 border-color #f95555 !important
             border-color #f95555 !important
             .input__control
-                background url(../images/input-error.svg) no-repeat center right
-                background-size 1em
+                background url(../images/input-error.svg) no-repeat center right .01em
+                background-size .7em
     &_ok
         .input__control
-            background url(../images/input-ok.svg) no-repeat center right
-            background-size 1em
+            background url(../images/input-ok.svg) no-repeat center right .01em
+            background-size .75em
     &__top-border 
         position absolute
         right 10px
         top -1px
-        border-top 1px solid
-        border-top-color #959595
+        border-top 2px solid
+        border-top-color #d6dcf5
         transition all .2s ease 0s //transition border-color .13s ease-in,width 0s .1s;
         width calc(100% - 20px)
     &__box
-        padding 0.556em 0.833em
-        border 1px solid #959595
+        // box-shadow 0 2px 11px -4px rgba(0, 0, 0, 0.2)
+        padding 0.556em 0.5em 0.556em 0.833em
+        border 2px solid #d6dcf5
         border-top 0
         border-radius 4px
         width 100%
@@ -1042,8 +1081,8 @@ ul.list
             top -1px
             width 11px
             height 8px
-            border-top 1px solid
-            border-top-color #959595
+            border-top 2px solid
+            border-top-color #d6dcf5
         &:before
             left -1px
             border-top-left-radius 4px
@@ -1077,8 +1116,7 @@ ul.list
         position relative
         z-index 100
         background none
-        // &:focus // Событие для JS
-        //     border 1px solid #84aeff
+        padding-right 1em
     &__title
         transition all .2s ease 0s
         color #444
@@ -1651,10 +1689,15 @@ ul.list
     visibility hidden
     z-index 9999
     transition visibility 0ms 300ms
+    &__row
+        margin-bottom 30px
     &__wrapper
         display flex
         overflow auto
+        align-items center
+        justify-content center
         //white-space nowrap
+        padding 30px 0
         position absolute
         left 0
         top 0
@@ -1684,13 +1727,13 @@ ul.list
         margin auto
         transition transform 300ms 0ms
         transform translateY(-10px)
-        width calc(100% - 30px)
-        max-width 400px
+        width calc(100% - 22px)
+        max-width 450px
         // min-width 300px
         position relative
         background #fff
         border-radius 4px
-        padding 40px 30px
+        padding 30px 30px 40px 30px
         height auto
         box-shadow 0px 4px 10px 0px rgba(73, 73, 73, 0.4)
         &
@@ -1712,7 +1755,7 @@ ul.list
         line-height 1.7em
         text-align center
         color #010101
-        margin-bottom 20px
+        margin-bottom 30px
         margin-top 10px
 
     &__close
@@ -1805,15 +1848,18 @@ ul.list
     font-size 16px
     // position relative
     // display inline-block
-    margin-bottom 0.6em
     &_error
         .checkbox__box
             border 2px solid #f95555 !important
-    &__wrapper
+    &__item
         cursor pointer
         display flex
         align-items center
         width max-content
+        margin-bottom 0.6em
+        &:hover
+            .checkbox__box
+                border 2px solid #2b519e
     &__control
         visibility hidden
         width 0
@@ -1824,9 +1870,7 @@ ul.list
             border 2px solid #2b519e
             &:before 
                 transform rotate(-45deg)
-    &:hover
-        .checkbox__box
-            border 2px solid #2b519e
+    
     &__text
         font-size 1em
         line-height 1.2em
@@ -1856,7 +1900,9 @@ ul.list
     &_theme_light
         display flex
         align-items center 
-        justify-content center 
+        justify-content center
+        .checkbox__item 
+            margin-bottom 0px
         &:hover
             .checkbox__box
                 border 2px solid #838383 
@@ -1874,12 +1920,12 @@ ul.list
         .checkbox__text
             color #838383
         .checkbox__link
-            margin-left 0.23em
+            margin-left 0.08em
             color #838383
             font-size 1em
             line-height 1.2em
             display inline
-                // border-bottom 1px solid #838383
+            text-decoration: underline
 .radio
     font-size 16px
     // position relative
@@ -1894,6 +1940,9 @@ ul.list
         align-items center
         width max-content
         margin-bottom 0.6em
+        &:hover
+            .radio__box
+                border 2px solid #2b519e
     &__control
         visibility hidden
         width 0
@@ -1905,9 +1954,7 @@ ul.list
             &:before
                 transform scale(1.3)
                 background #2b519e
-    &:hover
-        .radio__box
-            border 2px solid #2b519e
+    
     &__text
         font-size 1em
         line-height 1.2em
@@ -1931,3 +1978,98 @@ ul.list
             border-radius 50%
             background #fff
             transition all 200ms 50ms
+        
+.services       
+    margin-bottom 30px
+    &__items
+        row-flex()
+    &__item
+        position relative
+        cursor pointer
+        display flex
+        align-items center
+        // justify-content center
+        padding 10px 35px 10px 15px
+        margin-bottom 20px
+        background #fff
+        col()
+        // size(3)
+        border 2px solid #ddd
+        border-radius 4px
+        size(12)
+        @media (min-width 360px)
+            size(6)
+        @media (min-width 700px)
+            size(4)
+        @media (min-width 1000px)
+            size(3)
+        transition transform 100ms 0ms, background 200ms 0ms
+        overflow hidden
+        &:after
+            content ""
+            position absolute
+            height 0%
+            left 50%
+            top 50%
+            width 0
+            border-radius 50%
+            opacity 0
+            transition all .8s ease 0s
+            transform translateX(-50%) translateY(-50%)
+            z-index 5
+            background #5786e6
+        &:hover
+            &:after
+                height 450%
+                width 200%
+                opacity 1    
+            .services__title
+                color #fff
+            // background #f5f5f5
+            border-color #5786e6
+            // .services__title
+            //     transform scale(0.92)
+            .services__arrow
+                z-index 10
+                width 25px
+                right 5px
+                margin-left 3px
+                &
+                &:before
+                &:after
+                    background #fff
+                    transition all 250ms ease 50ms, background 100ms ease 10ms
+    &__title
+        position relative
+        z-index 10
+        font-size 13px
+        @media (min-width 700px)
+            font-size 16px
+        font-weight 500
+        line-height 1.3em
+        color #222
+        // text-align center 
+    &__arrow
+        position absolute
+        width 15px
+        height 2px 
+        background #bebec0
+        // position relative
+        margin-left 8px
+        transition all 250ms ease 100ms, background 100ms ease 50ms
+        right 15px
+        top 50%
+        &:before
+        &:after
+            content ''
+            position absolute
+            width 6px
+            height 2px
+            background #bebec0
+            right 0px
+        &:before
+            transform rotate(-45deg)
+            bottom -2px
+        &:after
+            transform rotate(45deg)
+            top -2px
