--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1994,7 +1994,7 @@ ul.list
         background #fff
         col()
         // size(3)
-        border 2px solid #ddd
+        border 2px dotted #ddd
         border-radius 4px
         size(12)
         @media (min-width 360px)
@@ -2003,7 +2003,7 @@ ul.list
             size(4)
         @media (min-width 1000px)
             size(3)
-        transition transform 100ms 0ms, background 200ms 0ms
+        transition transform 100ms 0ms, background 200ms 0ms, border 200ms 50ms
         overflow hidden
         &:after
             content ""
@@ -2020,13 +2020,13 @@ ul.list
             background #5786e6
         &:hover
             &:after
-                height 450%
-                width 200%
+                height 500%
+                width 250%
                 opacity 1    
             .services__title
                 color #fff
             // background #f5f5f5
-            border-color #5786e6
+            border 2px solid #5786e6
             // .services__title
             //     transform scale(0.92)
             .services__arrow
