--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -656,6 +656,9 @@
     overflow hidden
     cursor pointer
     display inline-block
+    outline none
+    transition all .1s ease 0s
+    top 0
     &__text
         font-size 1em
         line-height 1.2em
@@ -683,6 +686,9 @@
             opacity 1    
         .btn__text
             color #fff
+    &:active
+        //transform scale(1.02)
+        top 0.08em
     &_view
         &_action
             border 2px solid #f95555
