--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -469,7 +469,40 @@ block content
                     +e({tag:'a'}).item О нас
             .content
                 .container
+                    +b.cases
+                        +e.item
+                            +e.body
+                                +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
+                                +e.texts
+                                    +e.text
+                                        span ЗАДАЧА
+                                        |С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки систем массового участия. Товарищи! сложившаяся 
+                                    +e.text
+                                        span ОСОБЕННОСТИ ПРОЕКТА
+                                        |Задача организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
+                            +e.img
+                                img(src="http://volga-service63.ru/img/original_1621f515481580a5.jpg")
+                                +e.btn
+                                    +b.btn.btn_view_light
+                                        +e.text Подробнее о проекте
+                        +e.item
+                            +e.body
+                                +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
+                                +e.texts
+                                    +e.text
+                                        span ЗАДАЧА
+                                        |С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки систем массового участия. Товарищи! сложившаяся 
+                                    +e.text
+                                        span ОСОБЕННОСТИ ПРОЕКТА
+                                        |Задача организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
+                            +e.img
+                                img(src="http://volga-service63.ru/img/original_1621f515481580a5.jpg")
+                                +e.btn
+                                    +b.btn.btn_view_light
+                                        +e.text Подробнее о проекте
+                            
 
+            
                     +b.articles
                         +e.item
                             +e.box
@@ -707,6 +740,7 @@ block content
                                         //+b.radio 
                                         +e({tag: 'label'}).item                                     
                                             input(name='ok2' type='radio').radio__control
+                                            .radio__box
                                             .radio__text  123
                                         //+b.radio 
                                         +e({tag: 'label'}).item                                     
